--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,12 +29,17 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.aopalliance-1.0.jar=C:\\Users\\chern\\Desktop\\JAVA_libraries\\aopalliance-1.0.jar
+file.reference.commons-fileupload-1.3.jar=C:\\Users\\chern\\Desktop\\JAVA_libraries\\commons-fileupload-1.3.jar
+file.reference.commons-io-1.2.jar=C:\\Users\\chern\\Desktop\\JAVA_libraries\\commons-io-1.2.jar
+file.reference.gson-2.8.5.jar=C:\\Users\\chern\\Desktop\\JAVA_libraries\\gson-2.8.5.jar
 file.reference.jackson-annotations-2.9.7.jar=C:\\Users\\chern\\Desktop\\JAVA_libraries\\jackson-annotations-2.9.7.jar
 file.reference.jackson-core-2.9.7.jar=C:\\Users\\chern\\Desktop\\JAVA_libraries\\jackson-core-2.9.7.jar
 file.reference.jackson-databind-2.9.7.jar=C:\\Users\\chern\\Desktop\\JAVA_libraries\\jackson-databind-2.9.7.jar
 file.reference.jandex-2.0.0.Final.jar=C:\\Users\\chern\\Desktop\\JAVA_libraries\\jandex-2.0.0.Final.jar
 file.reference.javax.persistence.jar=C:\\Users\\chern\\Desktop\\JAVA_libraries\\javax.persistence.jar
+file.reference.json-20180813.jar=C:\\Users\\chern\\Desktop\\JAVA_libraries\\json-20180813.jar
 file.reference.spring-tx-4.0.4.RELEASE.jar=C:\\Users\\chern\\Desktop\\JAVA_libraries\\spring-tx-4.0.4.RELEASE.jar
+file.reference.validation-api-2.0.1.Final.jar=C:\\Users\\chern\\Desktop\\JAVA_libraries\\validation-api-2.0.1.Final.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -53,7 +58,12 @@ javac.classpath=\
     ${file.reference.jandex-2.0.0.Final.jar}:\
     ${file.reference.javax.persistence.jar}:\
     ${file.reference.spring-tx-4.0.4.RELEASE.jar}:\
-    ${libs.hibernate4-persistence.classpath}
+    ${libs.hibernate4-persistence.classpath}:\
+    ${file.reference.commons-fileupload-1.3.jar}:\
+    ${file.reference.commons-io-1.2.jar}:\
+    ${file.reference.gson-2.8.5.jar}:\
+    ${file.reference.json-20180813.jar}:\
+    ${file.reference.validation-api-2.0.1.Final.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
